[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hammerapi"
version = "0.1.0"
authors = [
    { name="Shayan Saha", email="shayan851997@gmail.com" },
]
description = "A swift multi-threaded API performance testing library with integrated local hardware monitoring and interactive dash outputs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    "psutil>=5.9.0"
]