[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hammerAPIpy"
version = "0.1.0"
description = "A lightweight, blazing-fast, multi-threaded API performance and load testing library for Python. HammerAPI allows you to orchestrate parallel API requests smoothly while automatically collecting cross-platform hardware telemetry (CPU/RAM usage) from your local machine, compiling everything into a self-contained, interactive HTML dashboard."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"} # Change if you use a different license

authors = [
    {name = "Shayan", email = "shayan851997@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.24.0",
    "psutil>=5.9.0"
]

[project.urls]
"Homepage" = "https://github.com/shayansaha85/hammerAPI"

# This section explicitly tells Hatch to look inside the src/ folder
[tool.hatch.build.targets.wheel]
packages = ["src/hammerapi"]